Fix main menu alignment edge cases

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -56,11 +56,12 @@ h1, h2 {
 }
 
 #home-container {
-  background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("../img/chicago-benjamin-suter.jpeg"), rgb(159, 159, 159); 
+  background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("/assets/img/chicago-benjamin-suter.jpeg"), rgb(159, 159, 159); 
   // background-blend-mode: darken;
   background-size: cover;
   background-position: 51%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
@@ -77,7 +78,7 @@ h1, h2 {
 // }
 
 #left-sidebar {
-  background: rgba(0,0,0,0.6) url("../img/chicago-benjamin-suter.jpeg"); 
+  background: rgba(0,0,0,0.6) url("/assets/img/chicago-benjamin-suter.jpeg"); 
   background-blend-mode: darken;
   background-size: cover;
   background-position: 51%;
